--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input type="text" value="" name="search2">
 
             <button class="citySearch" type="submit" value="click" onClick="citySearch(this.form)"><i
-                    class="fa fa-search"></i></button>
+                cd    class="fa fa-search"></i></button>
         </form>
         <div class="pastSearchContainer" id="pastSearchLink">
         </div>
