--- a/index.html
+++ b/index.html
@@ -6,50 +6,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- <link rel="stylesheet" href="./styles/jass.css" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <title>Weather Dashboard</title>
 </head>
+
 <body>
-<!-- Header for dashboard -->
-<header>
-    <div class="jumbotron jumbotron-fluid horizontal-gradient">
-        <div class="container" style="margin:auto; max-width:fit-content">
-            <h1 class="display-4">Weather Dashboard</h1>
-            <p class="lead"></p>
+    <!-- Header for dashboard -->
+    <header>
+        <div class="jumbotron jumbotron-fluid horizontal-gradient">
+            <div class="container text-center" style="margin:auto; max-width:fit-content">
+                <h1>Weather Dashboard</h1>
+                <p class="lead"></p>
+            </div>
         </div>
-    </div>
-</header>
+    </header>
+    <main>
+        <!-- _______________________________________________ -->
 
-<main>
-<!-- creating search button -->
-    <!-- putting search button in a container -->
-    <div class="searchContainer p-3 my-3 border">
-        <form class="city" id="cityForm" action="/action_page.php" style="margin:left;max-width:300px" method="get">
-            <h4>Search for a City:</h4>
-            <input type="text" value="" name="search2">
+        <!-- Current Cities Weather card -->
 
-            <button class="citySearch" type="submit" value="click" onClick="citySearch(this.form)"><i
-                cd    class="fa fa-search"></i></button>
-        </form>
-        <div class="pastSearchContainer" id="pastSearchLink">
+
+        <!-- creating search button -->
+        <!-- putting search button in a fluid container -->
+        <div class="container-fluid max-width: 1200px">
+            <div class="row">
+                <!-- to keep container on the screen and having it used as a sidebar. Adding column size -->
+                <aside class="col-lg-3 pb-3">
+                    <h2 id="form-heading" class="mt-1 h3 form-label">Search for a City:</h2>
+                    <form id="search-doc" class="form" max-width>
+                        <!-- adding search box form -->
+                        <div class="form-inline form-group">
+                            <div class="citySearch">
+                                <input type="text" class="form-input weather-search" id="cityNameSearch"
+                                    aria-describedby="searchCity" aria-labelledby="form-heading"
+                                    aria-controls="current forcast" placeholder="Enter City">
+                            </div>
+                            <div class="input-group-append">
+                                <button type="submit" class="btn search-button" id="search-button"
+                                    aria-label="search">Search</button>
+                                <hr>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="list-group" id="history"></div>
+                </aside>
+                <!-- Adding forcast section -->
+                <div class="col-lg-9 pb-3">
+                    <section id="today" class="mt-2"></section>
+                    <section id="forecast" class="row mt-2"></section>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <!-- making container for current and 5 day forecast -->
-    <div id="currentWeatherContainer" class="list">
-        <div id="iconsContainer" class="icons">
 
-        </div>
-    </div>
-    <!-- adding cloudflare to format date, time stamp and timezone -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/dayjs.min.js" integrity="sha512-hcV6DX35BKgiTiWYrJgPbu3FxS6CsCjKgmrsPRpUPkXWbvPiKxvSVSdhWX0yXcPctOI2FJ4WP6N1zH+17B/sAA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/plugin/utc.min.js" integrity="sha512-z84O912dDT9nKqvpBnl1tri5IN0j/OEgMzLN1GlkpKLMscs5ZHVu+G2CYtA6dkS0YnOGi3cODt3BOPnYc8Agjg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/plugin/timezone.min.js" integrity="sha512-fG1tT/Wn/ZOyH6/Djm8HQBuqvztPQdK/vBgNFLx6DQVt3yYYDPN3bXnGZT4z4kAnURzGQwAnM3CspmhLJAD/5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- adding cloudflare to format date, time stamp and timezone -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/dayjs.min.js"
+            integrity="sha512-hcV6DX35BKgiTiWYrJgPbu3FxS6CsCjKgmrsPRpUPkXWbvPiKxvSVSdhWX0yXcPctOI2FJ4WP6N1zH+17B/sAA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="./script.js"></script>
-</main>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/plugin/utc.min.js"
+            integrity="sha512-z84O912dDT9nKqvpBnl1tri5IN0j/OEgMzLN1GlkpKLMscs5ZHVu+G2CYtA6dkS0YnOGi3cODt3BOPnYc8Agjg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/plugin/timezone.min.js"
+            integrity="sha512-fG1tT/Wn/ZOyH6/Djm8HQBuqvztPQdK/vBgNFLx6DQVt3yYYDPN3bXnGZT4z4kAnURzGQwAnM3CspmhLJAD/5Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+        <script src="./script.js"></script>
+    </main>
 </body>
 
 </html>
